--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
   "keywords": [],
   "author": "Brian Burt ",
   "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.22",
-    "prettier": "^2.8.8"
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
