--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "author": "Brian Burt ",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@apollo/server": "^4.7.1",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
